<resources>
    <string name="app_name">Cordis</string>
    <string name="searchbar_hint">Track, artist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wonderwall" translatable="false">[Verse 1]\nEm       G\nToday is gonna be the day\n              D                  A7sus4\nThat they\'re gonna throw it back to you\nEm          G\nBy now you should\'ve somehow\n    D                A7sus4\nRealised what you gotta do\n \nEm                   G\nI don\'t believe that anybody\n D           A7sus4              C D  A7sus4  A7sus4\nFeels the way I do about you now\n \n \n[Verse 2]\nEm           G\nBackbeat the word is on the street\n          D                 A7sus4\nThat the fire in your heart is out\nEm              G\nI\'m sure you\'ve heard it all before\n          D             A7sus4\nBut you never really had a doubt\nEm                   G       D\nI don\'t believe that anybody feels\n           A7sus4            Em  G  D  A7sus4\nThe way I do about you now\n \n \n[Pre-Chorus]\n     C                D            Em\nAnd all the roads we have to walk are winding\n     C                D                Em\nAnd all the lights that lead us there are blinding\n C              D\nThere are many things that I would\nG       D      Em\nLike to say to you\n       D      A7sus4\nBut I don\'t know how\n \n \n[Chorus]\n         C    Em  G\nBecause maybe\n        Em                   C        Em  G\nYou\'re gonna be the one that saves me?\n     Em   C  Em  G\nAnd after all\n                Em  C  Em  G   Em\nYou\'re my wonderwall\n \n \n[Verse 3]\nEm        G\nToday was gonna be the day\n             D                  A7sus4\nBut they\'ll never throw it back to you\nEm         G\nBy now you should\'ve somehow\n    D                    A7sus4\nRealised what you\'re not to do\nEm                   G\nI don\'t believe that anybody\nD            A7sus4\nFeels the way I do\n           Em  G  D  A7sus4\nAbout you now\n \n \n[Pre-Chorus]\n     C                  D              Em\nAnd all the roads that lead you there are winding\n     C                   D             Em\nAnd all the lights that light the way are blinding\n C              D                  G       D      Em\nThere are many things that I would like to say to you\n       D      A7sus4\nBut I don\'t know how\n \n \n[Chorus]\n        C    Em  G\nI said maybe\n        Em                   C        Em  G\nYou\'re gonna be the one that saves me?\n     Em   C  Em  G\nAnd after all\n           Em   C   Em  G  Em\nYou\'re my wonderwall\n        C             Em   G\nI said maybe (I said maybe)\n        Em                   C        Em  G\nYou\'re gonna be the one that saves me?\n     Em   C  Em  G\nAnd after all\n           Em   C   Em  G  Em\nYou\'re my wonderwall\n        C             Em   G\nI said maybe (I said maybe)\n        Em                   C               Em      G\nYou\'re gonna be the one that saves me? (that saves me)\n        Em                   C               Em      G\nYou\'re gonna be the one that saves me? (that saves me)\n        Em                   C               Em      G  Em\nYou\'re gonna be the one that saves me? (that saves me)\n \n \n[Solo]\ne|--------3-0----|\nB|-1-0-1---------|\nG|---------------|\nD|---------------|   x8\nA|---------------|\nE|---------------|</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="proceed_to">Proceed to</string>
    <string name="created_songs">Created songs</string>
    <string name="songs_you_ve_created">Songs you\'ve created</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="tuning">Tuning:</string>
    <string name="capo">Capo:</string>
    <string name="chords">Chords</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="favourite_songs">Favourite songs</string>
    <string name="songs_you_ve_liked">Songs you\'ve liked</string>
    <string name="your_songs">Your songs</string>
    <string name="songs_you_ve_added">Songs you\'ve added</string>
    <string name="song">Song</string>
    <string name="playlist">Playlist</string>
    <string name="artist">Artist</string>
    <string name="font">Font</string>
    <string name="transpose">Transpose</string>
    <string name="scroll">Scroll</string>
    <string name="playlist_descr">Playlist description</string>
    <string name="playlist_name">Playlist name</string>
    <string name="create_playlist">Create a new playlist</string>
    <string name="change_image">Change image</string>
    <string name="create">Create\n</string>
    <string name="create_song">Create a new song</string>
    <string name="create_chords">Create new chords</string>
    <string name="stop">Stop</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="tuning_example" translatable="false">EADGBE</string>
    <string name="capo_example">2nd fret</string>
    <string name="log_out">Log out</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
</resources>