<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateSongFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/create_chords"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/song_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/dvd_disk" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/change_image"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editSongNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/song_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/songName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editSongArtistLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artist_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/songArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTuningLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tuning">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tuning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editCapoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/capo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editChordsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chords">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/chords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_cancel"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_create"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />
        </LinearLayout>
        <View
            android:id="@+id/blockingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:alpha="0.5"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </LinearLayout>
</ScrollView>